@@ -1571,7 +1571,7 @@ function return_moduledata_sum_value ($id_agent_module, $period, $date = 0) {
 	$last_data = "";
 	$total_badtime = 0;
 	$module_interval = get_module_interval ($id_agent_module);
-	$timestamp_begin = $datelimit + module_interval;
+	$timestamp_begin = $datelimit + $module_interval;
 	$timestamp_end = 0;
 	$sum = 0;
 	$data_value = 0;
