@@ -148,7 +148,7 @@ $lang_label["log_filter"]="Tipo de filtro de Log";
 $lang_label["not_connected"]="No estás conectado/a";
 $lang_label["administrator"]="Administrador";
 $lang_label["normal_user"]="Usuario estándar";
-$lang_label["has_connected"]="Estás conectado/a como";
+$lang_label["has_connected"]="Conectado";
 $lang_label["logged_out"]="Desconectado/a";
 $lang_label["logout_msg"]="La sesión ha finalizado. Cierre la ventana del navegador para cerrar la sesión de Pandora.<br><br>";
 $lang_label["user_last_activity"]="Última actividad en Pandora";
